# RenderGround

./: .clang-format  .gitignore  CMakeLists.txt  CompilerWarnings.cmake  Dependencies.cmake  notes.txt
src/: config.hpp  main.cpp  util.hpp
src/core/: Application.cpp  Application.hpp  CMakeLists.txt  EventSystem.hpp  Window.cpp  Window.hpp  WindowEventSystem.cpp  WindowEventSystem.hpp
src/core/application/: Application.cpp  Application.hpp  CMakeLists.txt
src/core/window/: CMakeLists.txt  Window.cpp  Window.hpp  WindowEventSystem.cpp  WindowEventSystem.hpp
